--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,12 +1,9 @@
 .sidebar {
-    /* background-color: #e2deda; */
-    background-color:#cde0fa86;
     padding: 0px 30px 0px 30px;
     height: 100vh;
-    /* width: 200px; */
     background-color: white;
     border-right: #f06c34;
-    /* background: linear-gradient(90deg, rgba(247,163,120,1) 0%, rgba(251,201,128,1) 100%); */
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .logo {
