--- a/src/components/Task/index.css
+++ b/src/components/Task/index.css
@@ -1,6 +1,6 @@
 .task {
     display: grid;
-    grid-template-columns: 1fr 200px;
+    grid-template-columns: 1fr 100px;
     width: 100%;
     margin-bottom: 10px;
     height: 60px;
@@ -8,11 +8,11 @@
     background-color: white;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     overflow: hidden;
+    cursor: pointer;
 }
 
 .task_left {
-    display: grid;
-    grid-template-columns: 100px 1fr;
+    display: flex;
     align-items: center;
     height: 100%;
 }
@@ -21,6 +21,12 @@
     display: flex;
     align-items: center;
 }
+
+.task_up {
+    margin-left: 30px;
+    cursor: pointer;
+}
+
 
 .done {
     /* display: inline-block; */
@@ -66,14 +72,14 @@
 
 .task_action {
     display: flex;
-    width: 20px;
+    width: 30px;
     background-color: green;
     height: 100%;    
-    margin-right: 10px;
+    margin-right: 25px;
 }
 
 .task_tools {
-    display: flex;
+    display: flex;    
     align-items: center;
     height: 100%;
 }
@@ -82,6 +88,7 @@
     height: 100%;
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
 
 .day_today {
@@ -89,11 +96,16 @@
     font-weight: 700;
 }
 
-.day_yesterday {
+/* .day_yesterday {
     color: red;
     font-weight: 700;
-}
+} */
 
 .project {
     font-weight: 500;
+}
+
+.importantTag {
+    color: red;
+    font-weight: 700;
 }
