--- a/src/components/Action/Action.css
+++ b/src/components/Action/Action.css
@@ -5,10 +5,10 @@
     margin-right: 20px;
 }
 
-.do {
+.important {
     background-color: #f06c34;
 }
-.go {
+/* .go {
     background-color: green;
 }
 .wait {
@@ -16,4 +16,4 @@
 }
 .call {
     background-color: blue;
-}
+} */
