--- a/src/delete/Tasks/Tasks.css
+++ b/src/delete/Tasks/Tasks.css
@@ -1,4 +1,4 @@
-
+/* 
 
 
 .tasks_filter {
@@ -35,6 +35,6 @@ li {
 }
 
 .plantask_date {
-    font-weight: 500;
+    font-weight: 700;
     margin-bottom: 10px;
-}
+} */
