--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,25 @@
     min-height: 100vh;
 }
 
-
 .wrapper {    
     max-width: 800px;
     margin: 0 auto;
+    padding: 20px 0;
+}
+
+.block {
+    margin: 30px 0;
+}
+
+.nav {
+    margin-right: 30px;
+    cursor: pointer;
+}
+
+.nav:hover {
+    font-weight: 700;
+}
+
+.nav-active {
+    font-weight: 700;
 }
