--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
     background-color: #f8fbff;
     min-height: 100vh;
+
 }
 
 .wrapper {    
@@ -10,12 +11,14 @@
 }
 
 .block {
-    margin: 30px 0;
+    margin-bottom: 70px;
 }
 
 .nav {
-    margin-right: 30px;
+    display: inline-block;
     cursor: pointer;
+    width: 100px;
+    text-align: center;
 }
 
 .nav:hover {
