change currentask thunk

--- a/src/components/Action/Action.css
+++ b/src/components/Action/Action.css
@@ -10,10 +10,10 @@
 }
 /* .go {
     background-color: green;
-}
+} */
 .wait {
     background-color: gray;
 }
-.call {
+/* .call {
     background-color: blue;
 } */
